--- a/installer/css/index.css
+++ b/installer/css/index.css
@@ -1,7 +1,6 @@
 .main {
     width: 800px;
     margin: 0 auto;
-    text-align: center;
 }
 .logo{
     width: 80px;
@@ -25,5 +24,6 @@
     text-align: left;
     padding-top: 10px;
     padding-left: 20px;
+    padding-right: 20px;
 
 }
